# PHD-object-tracking

./: .gitignore  Birth_Weight.cpp  CMakeLists.txt  Detected_Object.cpp  Existing_Object_Motion_Model.cpp  Ground_Truth.cpp  Missed_detections.cpp  MultiTargetStateExtraction.cpp  Normalize_weights.cpp  PositionSensor.cpp  Pruning_and_Merging.cpp  README.md  Spawn_Motion_Model.cpp  Spawn_Weights.cpp  Update_PHD_components.cpp  base_phd.ipynb  data_store.ipynb  first_20_frame_optical_res.json  load_json  load_json.cpp  makefile  phd_basic_sim.cpp  phd_filter.cpp  phd_filter.h  phd_filter_2d.h  phd_filter_base.cpp  phd_filter_base.h  phd_filter_box.h  phd_json_dump.cpp  phd_json_sim.cpp  phd_sim.cpp  run_C++.ipynb  run_phd.cpp  setup.sh
data/: MOT16-09_optical_flow_res.json  MOT16-11_optical_flow_res.json  MOT16-14_optical_flow_res.json  README.txt
data/output/: all_particles_first_20_frame_optical_res.json  filtered_MOT16-09.json  filtered_MOT16-09_with_ids.json  filtered_MOT16-11.json  filtered_MOT16-11_with_ids.json  filtered_first_20_frame_optical_res.json  run_output_MOT_16_14.json  run_phd_output_50.json
discarded_files/: Birth_Weight.cpp  Detected_Object.cpp  Existing_Object_Motion_Model.cpp  Missed_detections.cpp  MultiTargetStateExtraction.cpp  Normalize_weights.cpp  Spawn_Motion_Model.cpp  Spawn_Weights.cpp  Update_PHD_components.cpp
filter/: phd_filter_2d.h  phd_filter_base.cpp  phd_filter_base.h  phd_filter_box.h
python_utils/: box_vis_utils.py  id_assigner.py  json_to_txt.py
simulator/: Ground_Truth.hpp  PositionSensor.hpp
utils/: data_utils.h  plotting_utils.hpp
